添加连接断开监听事件，添加顶部桌面拖拽

--- a/src/renderer/src/index.css
+++ b/src/renderer/src/index.css
@@ -11,3 +11,11 @@ body {
   height: 100%;
   overflow: hidden;
 }
+
+.app-drag {
+  -webkit-app-region: drag;
+}
+
+.app-noDrag {
+  -webkit-app-region: no-drag;
+}
